fixed overflow and background color problem

--- a/react-deploy/src/App.css
+++ b/react-deploy/src/App.css
@@ -1,13 +1,12 @@
 .App {
   width: 100%;
   height: 100%;
-  position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #27292a;
   padding: 10%;
-  overflow-y: scroll;
+  overflow: auto;
 }
 
 .letter {
@@ -24,7 +23,8 @@
   font-size: medium;
 }
 
-html,
+
 body {
    height: 100%;
+   background-color: #27292a !important
  }
